# fever

./: .gitignore  README.md  analysis.ipynb  claim_only.jsonnet  compile-protos.sh  distributed_oracle_evidence.jsonnet  environment.yaml  evidence_ranker.jsonnet  model.jsonnet  oracle_evidence.jsonnet  pylintrc  pyproject.toml  serene.toml  slurm-ranker.sh  slurm-run.sh  verifier.jsonnet  verifier_in_batch.jsonnet
.github/workflows/: python-package.yml
serene/: analysis.py  browser.py  callbacks.py  constants.py  data.py  dataset.py  dpr.py  main.py  metrics.py  model.py  predictor.py  util.py  wiki.py  wiki_db.py
serene/protos/: fever.proto
src/: model.jsonnet
src/snif/: dataset.py  model.py  util.py
test_fixtures/: evidence_ranker.jsonnet  fever_test.jsonl
tests/: model_test.py
